# ChangeLog for dev-libs/suikyo
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/suikyo/ChangeLog,v 1.42 2010/01/26 15:55:18 matsuu Exp $

  26 Jan 2010; MATSUU Takuto <matsuu@gentoo.org> -suikyo-2.1.0.ebuild:
  Removed old version.

  10 Jan 2010; nixnut <nixnut@gentoo.org> suikyo-2.1.0-r1.ebuild:
  ppc stable #296469

  29 Dec 2009; Raúl Porcel <armin76@gentoo.org> suikyo-2.1.0-r1.ebuild:
  alpha/sparc stable wrt #296469

  17 Dec 2009; Jeroen Roovers <jer@gentoo.org> suikyo-2.1.0-r1.ebuild:
  Stable for HPPA (bug #296469).

  16 Dec 2009; Markus Meier <maekke@gentoo.org> suikyo-2.1.0-r1.ebuild:
  amd64 stable, bug #296469

  16 Dec 2009; Markus Meier <maekke@gentoo.org> suikyo-2.1.0-r1.ebuild:
  x86 stable, bug #296469

  11 Dec 2009; Brent Baude <ranger@gentoo.org> suikyo-2.1.0-r1.ebuild:
  Marking suikyo-2.1.0-r1 ppc64 for bug 296469

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing usata from metadata.xml as per #22931.

*suikyo-2.1.0-r1 (01 Dec 2007)

  01 Dec 2007; <matsuu@gentoo.org> +files/suikyo-2.1.0-pkgconfig.patch,
  +suikyo-2.1.0-r1.ebuild:
  Fixed suikyo.pc.in, bug #200420.
  Cleanup ebuild.

  05 Dec 2006; Jeroen Roovers <jer@gentoo.org> suikyo-2.1.0.ebuild:
  Stable for HPPA (bug #156872).

  04 Dec 2006; Jason Wever <weeve@gentoo.org> suikyo-2.1.0.ebuild:
  Stable on SPARC wrt bug #156872 .

  31 Oct 2006; Jason Wever <weeve@gentoo.org> suikyo-2.1.0.ebuild:
  Added ~sparc keyword wrt bug #152265.

  25 Nov 2005; Tom Gall <tgall@gentoo.org> suikyo-2.1.0.ebuild:
  stable on ppc64

  23 Sep 2005; MATSUU Takuto <matsuu@gentoo.org> suikyo-2.1.0.ebuild:
  Stable on amd64.

  02 Jul 2005; Bryan Østergaard <kloeri@gentoo.org> suikyo-2.1.0.ebuild:
  Stable on alpha.

  30 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> suikyo-2.1.0.ebuild:
  Stable on ppc.

  24 Apr 2005; Mamoru KOMACHI <usata@gentoo.org> suikyo-2.1.0.ebuild:
  Stable on x86.
