@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/suikyo
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/suikyo/ChangeLog,v 1.42 2010/01/26 15:55:18 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/suikyo/ChangeLog,v 1.43 2010/03/20 16:52:52 matsuu Exp $
+
+*suikyo-2.1.0-r2 (20 Mar 2010)
+
+  20 Mar 2010; MATSUU Takuto <matsuu@gentoo.org> +suikyo-2.1.0-r2.ebuild:
+  Fixed dodoc issue, bug #305557.
 
   26 Jan 2010; MATSUU Takuto <matsuu@gentoo.org> -suikyo-2.1.0.ebuild:
   Removed old version.
